sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while (fin!=taille) {
  ^