sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(tab:Array):unit  {
  var fin=0
  val taille=tab.length
  var i=0
  while (fin!=taille) {
    if (i=taille-1) {i=0}
    if (tab[i]>tab[i+1]) {
      echange (i,i+1)
      i=i+1
    } else {
      fin=fin+1
      i=i+1
    }
    if ((fin!=taille)&&(i==0)){fin=0}
  }
}